[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fakeredis>=2.24.1",
    "fastapi[all]>=0.114.1",
    "pyjwt>=2.9.0",
    "redis>=5.0.8",
    "websockets>=13.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.4",
]
